@@ -514,14 +514,17 @@ INTRODUCTIONSYSTEM=NO
 LASTPLAYERLEVEL=91
 
 # The STARTHP setting is the default starting hit points for all players.
+# You can also add a comma, and an addendum to every classes hit point formula.
 # Default is 20.
 STARTHP=20
 
 # The STARTMANA setting is the default starting mana for all players.
+# You can also add a comma, and an addendum to every classes mana formula.
 # Default is 100.
 STARTMANA=100
 
 # The STARTMOVE setting is the default starting movement for all players.
+# You can also add a comma, and an addendum to every classes move formula.
 # Default is 100.
 STARTMOVE=100
 
