@@ -998,21 +998,21 @@
 		
 		<TR><TD WIDTH=20% VALIGN=TOP><FONT COLOR=WHITE>STARTHP</FONT>
 			</TD><TD WIDTH=80% VALIGN=TOP>
-			<INPUT TYPE=TEXT NAME=STARTHP SIZE=10 VALUE="@INIValue?MASK=STARTHP&VALUE@">
+			<INPUT TYPE=TEXT NAME=STARTHP SIZE=20 VALUE="@INIValue?MASK=STARTHP&VALUE@">
 			<BR>
 			<FONT COLOR=WHITE>@INIValue?MASK=STARTHP&INIHELP@
 		</TD></TR>
 		
 		<TR><TD WIDTH=20% VALIGN=TOP><FONT COLOR=WHITE>STARTMANA</FONT>
 			</TD><TD WIDTH=80% VALIGN=TOP>
-			<INPUT TYPE=TEXT NAME=STARTMANA SIZE=10 VALUE="@INIValue?MASK=STARTMANA&VALUE@">
+			<INPUT TYPE=TEXT NAME=STARTMANA SIZE=20 VALUE="@INIValue?MASK=STARTMANA&VALUE@">
 			<BR>
 			<FONT COLOR=WHITE>@INIValue?MASK=STARTMANA&INIHELP@
 		</TD></TR>
 		
 		<TR><TD WIDTH=20% VALIGN=TOP><FONT COLOR=WHITE>STARTMOVE</FONT>
 			</TD><TD WIDTH=80% VALIGN=TOP>
-			<INPUT TYPE=TEXT NAME=STARTMOVE SIZE=10 VALUE="@INIValue?MASK=STARTMOVE&VALUE@">
+			<INPUT TYPE=TEXT NAME=STARTMOVE SIZE=20 VALUE="@INIValue?MASK=STARTMOVE&VALUE@">
 			<BR>
 			<FONT COLOR=WHITE>@INIValue?MASK=STARTMOVE&INIHELP@
 		</TD></TR>
