@@ -10,6 +10,7 @@
   9. All achievements now support PLAYERMASK, even if it makes no sense.
  10. Lots of new achievements -- mostly skill proficiency related
  11. Prop_InstantDeath can now kill you less instantly.
+ 12. STARTMANA, STARTMOVE, and STARTHP in ini file can append to class changes/level.
   
 # Build 5.9.11.1 Release 02/26/2021
   Bug Fix Release:
